--- a/src/main/resources/pruebas.html
+++ b/src/main/resources/pruebas.html
@@ -6,16 +6,39 @@
 </head>
 <body>
 Engagement Managers<br>
-<a href="http://localhost:8080/profile/profiletotals/Engagement Managers/excel">excel</a><br>
-<a href="http://localhost:8080/profile/profiletotals/Engagement Managers/csv">csv</a><br><br><br>
+<a href="http://localhost:8080/profile/profiletotals/Engagement Managers/excel">total excel</a><br>
+<a href="http://localhost:8080/profile/profiletotals/Engagement Managers/csv">total csv</a><br>
+<a href="http://localhost:8080/profile/profilelist/Engagement Managers/excel">lista excel</a><br><br><br>
 
 Architects<br>
-<a href="http://localhost:8080/profile/profiletotals/Architects/excel">excel</a><br>
-<a href="http://localhost:8080/profile/profiletotals/Architects/csv">csv</a><br><br><br>
+<a href="http://localhost:8080/profile/profiletotals/Architects/excel">total excel</a><br>
+<a href="http://localhost:8080/profile/profiletotals/Architects/csv">total csv</a><br>
+<a href="http://localhost:8080/profile/profilelist/Architects/excel">lista excel</a><br><br><br>
+
+Business Analyst<br>
+<a href="http://localhost:8080/profile/profiletotals/Business Analyst/excel">total excel</a><br>
+<a href="http://localhost:8080/profile/profiletotals/Business Analyst/csv">total csv</a><br>
+<a href="http://localhost:8080/profile/profilelist/Business Analyst/excel">lista excel</a><br><br><br>
+
+Software Engineer<br>
+<a href="http://localhost:8080/profile/profiletotals/Software Engineer/excel">total excel</a><br>
+<a href="http://localhost:8080/profile/profiletotals/Software Engineer/csv">total csv</a><br>
+<a href="http://localhost:8080/profile/profilelist/Software Engineer/excel">lista excel</a><br><br><br>
+
+Industry Experts<br>
+<a href="http://localhost:8080/profile/profiletotals/Industry Experts/excel">total excel</a><br>
+<a href="http://localhost:8080/profile/profiletotals/Industry Experts/csv">total csv</a><br>
+<a href="http://localhost:8080/profile/profilelist/Industry Experts/excel">lista excel</a><br><br><br>
 
 Architects & SE Custom Apps Development<br>
-<a href="http://localhost:8080/profile/profiletotals/Architects & SE Custom Apps Development/excel">excel</a><br>
-<a href="http://localhost:8080/profile/profiletotals/Architects & SE Custom Apps Development/csv">csv</a><br>
+<a href="http://localhost:8080/profile/profiletotals/Architects & SE Custom Apps Development/excel">total excel</a><br>
+<a href="http://localhost:8080/profile/profiletotals/Architects & SE Custom Apps Development/csv">total csv</a><br>
+<a href="http://localhost:8080/profile/profilelist/Architects & SE Custom Apps Development/excel">lista excel</a><br><br><br>
+
+Architects & SE Integration & APIs<br>
+<a href="http://localhost:8080/profile/profiletotals/Architects & SE Integration & APIs/excel">total excel</a><br>
+<a href="http://localhost:8080/profile/profiletotals/Architects & SE Integration & APIs/csv">total csv</a><br>
+<a href="http://localhost:8080/profile/profilelist/Architects & SE Integration & APIs/excel">lista excel</a><br><br><br>
 
 </body>
 </html>
