listado versiones de roles capacidades y filtrado por identificador de importacion

--- a/src/main/resources/pruebas.html
+++ b/src/main/resources/pruebas.html
@@ -11,8 +11,8 @@
 
 Engagement Managers<br>
 <a href="http://localhost:8080/profile/profiletotals/Engagement Managers/excel">total excel</a><br>
-<!--<a href="http://localhost:8080/profile/profiletotals/Engagement Managers/csv">total csv</a><br>-->
-<a href="http://localhost:8080/profile/profilelist/Engagement Managers/excel">listado detalle excel</a>
+<a href="http://localhost:8080/profile/profiletotals/Engagement Managers/csv">total csv</a><br>
+<a href="http://localhost:8080/profile/profilelist/Engagement Managers/excel">listado detalle excel</a><br>
 <a href="http://localhost:8080/profile/profilelist/Engagement Managers/xls">listado detalle plantilla excel</a><br><br>
 
 Architects<br>
@@ -24,7 +24,7 @@ Architects<br>
 Business Analyst<br>
 <a href="http://localhost:8080/profile/profiletotals/Business Analyst/excel">total excel</a><br>
 <!-- <a href="http://localhost:8080/profile/profiletotals/Business Analyst/csv">total csv</a><br> -->
-<a href="http://localhost:8080/profile/profilelist/Business Analyst/excel">listado detalle excel</a>
+<a href="http://localhost:8080/profile/profilelist/Business Analyst/excel">listado detalle excel</a><br>
 <a href="http://localhost:8080/profile/profilelist/Business Analyst/xls">listado detalle plantilla excel</a><br><br>
 
 Software Engineer<br>
